remved some dirs

--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,7 @@ yarn-error.log
 /.idea
 /.vscode
 
+/images
+/themeforest-f6FE77Ek-edulearn-education-education-html-template
 wt-send.zip
 /wt-send
